# Projet5_OC

./: .gitignore  Dockerfile  Girardin_Vincent_1_support_012026.pptx  P4_OC.ipynb  P5_OC.ipynb  P5_OC_Polars2.ipynb  Présentation Projet4_OC.pptx  README.md  app.py  data.csv  docker.dockerfile  final_pipeline_turnover.pkl  pyproject.toml  pyproject_Polars.toml  requirements.txt  seed_db.py  test_api.py  test_global.py  test_main.py
.github/workflows/: main.yaml
