[project]
name = "ds-oc-projet5"
version = "0.1.0"
description = "Prediction d'attrition avec traçabilité PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "joblib==1.4.2",
    "polars==1.21.0",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "psycopg[binary]==3.2.3",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "python-multipart"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"