[project]
name = "ds-oc-projet5"
version = "0.1.0"
description = "Prediction d'attrition avec traçabilité PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "joblib==1.4.2",
    "polars>=1.0.0",
    "fastapi>=0.100.0",
    "python-dotenv",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "psycopg[binary]==3.2.3",
    "pyarrow>=23.0.0",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "python-multipart"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "seed_db"]